--- a/clinical_genes.ipynb
+++ b/clinical_genes.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPcadySdwxVs95lCsu8I2oU"
+      "authorship_tag": "ABX9TyNfB6kfbOHiOQR0c0y/x4rK",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,6 +16,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Murad460/Data_Science_Projects/blob/main/clinical_genes.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 12,
@@ -4561,10 +4572,8 @@
         "    Dense(1056,activation=\"relu\",kernel_initializer=GlorotUniform(),kernel_regularizer=l2(0.01)),\n",
         "    Dense(2056,activation=\"relu\",kernel_initializer=GlorotUniform(),kernel_regularizer=l2(0.01)),\n",
         "    Dense(3,activation=\"softmax\")\n",
-        "\n",
         "])\n",
-        "\n",
-        "model2.compile(optimizer=\"adam\",loss=\"sparse_categorical_crossentropy\",metrics=[\"accuracy\"])\n",
+        " model2.compile(optimizer=\"adam\",loss=\"sparse_categorical_crossentropy\",metrics=[\"accuracy\"])\n",
         "model2.fit(X_train,Y_train,epochs=100,validation_data=(X_test,Y_test),callbacks=[early_stopping])"
       ],
       "metadata": {
@@ -4572,7 +4581,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_G45Sx7z-Goj",
-        "outputId": "562fb1fb-1c3f-4e54-c26e-c23596628d33"
+        "outputId": "8c6748b6-59e5-45c8-b9b1-3a93059de119"
       },
       "execution_count": null,
       "outputs": [
@@ -4583,7 +4592,43 @@
             "Epoch 1/100\n",
             "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1137s\u001b[0m 3s/step - accuracy: 0.5008 - loss: 6.5176 - val_accuracy: 0.5029 - val_loss: 1.1171\n",
             "Epoch 2/100\n",
-            "\u001b[1m303/451\u001b[0m \u001b[32m━━━━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━\u001b[0m \u001b[1m4:45\u001b[0m 2s/step - accuracy: 0.4995 - loss: 1.0776"
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1110s\u001b[0m 2s/step - accuracy: 0.5006 - loss: 1.0633 - val_accuracy: 0.5029 - val_loss: 0.9979\n",
+            "Epoch 3/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1148s\u001b[0m 3s/step - accuracy: 0.5054 - loss: 0.9916 - val_accuracy: 0.5029 - val_loss: 0.9872\n",
+            "Epoch 4/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1159s\u001b[0m 2s/step - accuracy: 0.5037 - loss: 0.9895 - val_accuracy: 0.5029 - val_loss: 0.9862\n",
+            "Epoch 5/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1121s\u001b[0m 2s/step - accuracy: 0.4992 - loss: 0.9863 - val_accuracy: 0.5029 - val_loss: 0.9869\n",
+            "Epoch 6/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1105s\u001b[0m 2s/step - accuracy: 0.5017 - loss: 0.9858 - val_accuracy: 0.5029 - val_loss: 0.9871\n",
+            "Epoch 7/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1086s\u001b[0m 2s/step - accuracy: 0.4983 - loss: 0.9898 - val_accuracy: 0.5029 - val_loss: 0.9907\n",
+            "Epoch 8/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1071s\u001b[0m 2s/step - accuracy: 0.5030 - loss: 0.9883 - val_accuracy: 0.5029 - val_loss: 0.9861\n",
+            "Epoch 9/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1108s\u001b[0m 2s/step - accuracy: 0.4983 - loss: 0.9965 - val_accuracy: 0.5029 - val_loss: 0.9863\n",
+            "Epoch 10/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1098s\u001b[0m 2s/step - accuracy: 0.5008 - loss: 0.9837 - val_accuracy: 0.5029 - val_loss: 0.9869\n",
+            "Epoch 11/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1122s\u001b[0m 2s/step - accuracy: 0.4940 - loss: 0.9947 - val_accuracy: 0.5029 - val_loss: 0.9873\n",
+            "Epoch 12/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1116s\u001b[0m 2s/step - accuracy: 0.4957 - loss: 0.9945 - val_accuracy: 0.5029 - val_loss: 0.9874\n",
+            "Epoch 13/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1149s\u001b[0m 2s/step - accuracy: 0.5062 - loss: 0.9859 - val_accuracy: 0.5029 - val_loss: 0.9863\n",
+            "Epoch 14/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1069s\u001b[0m 2s/step - accuracy: 0.5056 - loss: 0.9835 - val_accuracy: 0.5029 - val_loss: 0.9880\n",
+            "Epoch 15/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1091s\u001b[0m 2s/step - accuracy: 0.4993 - loss: 0.9863 - val_accuracy: 0.5029 - val_loss: 0.9869\n",
+            "Epoch 16/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1097s\u001b[0m 2s/step - accuracy: 0.4993 - loss: 0.9859 - val_accuracy: 0.5029 - val_loss: 0.9861\n",
+            "Epoch 17/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1106s\u001b[0m 2s/step - accuracy: 0.5034 - loss: 0.9859 - val_accuracy: 0.5029 - val_loss: 0.9861\n",
+            "Epoch 18/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1063s\u001b[0m 2s/step - accuracy: 0.5031 - loss: 0.9868 - val_accuracy: 0.5029 - val_loss: 0.9879\n",
+            "Epoch 19/100\n",
+            "\u001b[1m451/451\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1102s\u001b[0m 2s/step - accuracy: 0.5061 - loss: 0.9864 - val_accuracy: 0.5029 - val_loss: 0.9864\n",
+            "Epoch 20/100\n",
+            "\u001b[1m235/451\u001b[0m \u001b[32m━━━━━━━━━━\u001b[0m\u001b[37m━━━━━━━━━━\u001b[0m \u001b[1m6:52\u001b[0m 2s/step - accuracy: 0.5024 - loss: 0.9877"
           ]
         }
       ]
